myblog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myblog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-blog-ip
  labels:
    app: wordpress
spec:
  tls:
  - secretName: myblog-tls
  backend:
    serviceName: wordpress
    servicePort: 80
